--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "type": "module",
+  "type": "commonjs",
   "name": "final-project-node-server",
   "version": "1.0.0",
   "description": "Node.js web server for climalingo application",
@@ -26,6 +26,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "mongoose": "^6.3.1"
   }
 }
